--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -3,5 +3,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/git'
     args: ['clone', 'https://github.com/garimas007/GCPLearning.git']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['compute', 'ssh', 'instance-20240504-101310', '--command=echo hello', '--impersonate-service-account=230921322422-compute@developer.gserviceaccount.com']
+
 options:
   logging: CLOUD_LOGGING_ONLY
