--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -3,8 +3,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/git'
     args: ['clone', 'https://github.com/garimas007/GCPLearning.git']
-  - name: 'gcr.io/cloud-builders/gcloud'
-    name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  #- name: 'gcr.io/cloud-builders/gcloud'
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'gcloud'
     args:
       - 'compute'
